--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    padding: 20px;
 }
 .f-right{
     float: right;
@@ -21,15 +22,17 @@
 .border-radius-25{
     border-radius: 25px;
 }
-
+.txt-center{
+    text-align: center;
+    color: white;
+}
 /* column */
 .col-50{
     width: 50%;
-    padding: 0 20px;
 }
 .col-100{
     width: 100%;
-    margin: 10px 20px;
+    margin: 10px 00px;
 }
 
 /* COMMON TO REMOVE */
@@ -59,4 +62,8 @@ header{
     background-color: #0084FD;
     padding: 20px 0;
     color: white;
+}
+/* FOOTER */
+footer{
+    background-color: #333333;
 }
