--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,19 @@ footer{
 
 /* MEDIA QUERY */
 @media screen and (min-width: 768px) {
+    /* to fix firts section */
     .col-33{
         width: calc(100% / 3 - 20px);
         margin: 10px;
     }
     .col-66{
         width: calc(100% / 3 * 2 - 20px);
+        margin: 10px;
+    }
+
+    /* to fix section with six column */
+    .col-50-media{
+        width: calc(100% / 2 - 20px);
         margin: 10px;
     }
 }
