--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,13 @@
     text-align: center;
     color: white;
 }
+.btn{
+    border: none;
+    border-radius: 25px;
+    padding: 10px 20px;
+    font-weight: 500;
+}
+
 /* column */
 .col-50{
     width: 50%;
@@ -47,15 +54,9 @@
     background-color: #fff;
     color: black;
 }
-/* height */
-.height-100{
-    height: 100px;
-}
-.height-300{
-    height: 300px;
-}
-.height-600{
-    height: 600px;
+.btn-blue{
+    background-color: #0084FD;
+    color: white;
 }
 /* HEADER */
 header{
@@ -70,6 +71,29 @@ header{
 header i{
     font-size: 30px;
 }
+
+/* first section of main */
+.content-col h2{
+    color: #0084FD;
+    margin: 20px 0;
+}
+.content-col p{
+    color: #5A6E7F;
+    font-size: 18px;
+    line-height: 1.8;
+    font-weight: 500;
+    margin: 10px 0;
+}
+.content-col .btn{
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding: 10px 50px;
+    margin: 20px 0;
+}
+.content-col img{
+    width: 100%;
+}
+
 /* FOOTER */
 footer{
     background-color: #333333;
@@ -100,6 +124,7 @@ footer{
         max-width: 1200px;
         margin: 0 auto;
     }
+    /* header */
     .show{
         display: none;
     }
@@ -118,12 +143,7 @@ footer{
         text-decoration: none;
         color: white;
     }
-    .btn{
-        border: none;
-        border-radius: 25px;
-        padding: 10px;
-        font-weight: 500;
-    }
+    
     /* to fix second section */
     .col-50{
         width: calc(100% / 2 - 20px);
