--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@
     width: 100%;
     padding: 0 20px;
 }
+.content img{
+    width: 100%;
+}
 .f-right{
     float: right;
 }
@@ -143,6 +146,8 @@ header i{
     padding: 15px 20px;
     font-weight: 800;
 }
+/* third section */
+
 /* FOOTER */
 footer{
     background-color: #333333;
